[gd_scene load_steps=4 format=3 uid="uid://efjbh7i3n3nn"]

[ext_resource type="Script" path="res://Scenes/ui/gameOver/game_over_panel.gd" id="1_7egy2"]
[ext_resource type="AudioStream" uid="uid://b6q4c7e4534n" path="res://Scenes/ui/button_click.wav" id="2_oapfs"]
[ext_resource type="AudioStream" uid="uid://ch31cut6ymr3b" path="res://Scenes/ui/button_hover.wav" id="3_ejomj"]

[node name="GameOverPanel" type="PanelContainer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7egy2")

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_oapfs")

[node name="ButtonHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ejomj")

[node name="CenterPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CenterPanel"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="GameOverText" type="Label" parent="CenterPanel/VBoxContainer"]
layout_mode = 2
text = "Game Over
"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterPanel/VBoxContainer"]
layout_mode = 2

[node name="RetryButton" type="Button" parent="CenterPanel/VBoxContainer"]
layout_mode = 2
text = "Retry"

[node name="MainMenuButton" type="Button" parent="CenterPanel/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[connection signal="mouse_entered" from="CenterPanel/VBoxContainer/RetryButton" to="." method="_on_retry_button_mouse_entered"]
[connection signal="pressed" from="CenterPanel/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="mouse_entered" from="CenterPanel/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_mouse_entered"]
[connection signal="pressed" from="CenterPanel/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
